[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Kachusova Evgeniya <ka4usova.e@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
requests = "^2.27.1"
Flask-RESTful = "^0.3.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
